[gd_scene load_steps=4 format=3 uid="uid://5l0awlit8jjt"]

[ext_resource type="Script" uid="uid://fmsrf1gp54l" path="res://main_scenes/game_session_settings_scene.gd" id="1_654cf"]
[ext_resource type="Texture2D" uid="uid://cd27btl0qh4i5" path="res://art/icons/languages/english.png" id="2_kkui5"]
[ext_resource type="Texture2D" uid="uid://dcgd61ryf3myc" path="res://art/icons/languages/polish.png" id="3_opiql"]

[node name="GameSessionSettingsScene" type="Node2D"]
script = ExtResource("1_654cf")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.6902411, 0.4580229, 1, 1)

[node name="SettingsContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
offset_left = 244.0
offset_top = 257.0
offset_right = 713.0
offset_bottom = 316.0

[node name="PLAYERS_NUMBER_LABEL" type="Label" parent="SettingsContainer"]
custom_minimum_size = Vector2(600, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "PLAYERS_NUMBER_LABEL"

[node name="PlayersNumberSlider" type="HSlider" parent="SettingsContainer"]
visible = false
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
min_value = 2.0
max_value = 4.0
value = 2.0
rounded = true

[node name="LanguageContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(256, 256)
offset_left = 1628.0
offset_top = 63.0
offset_right = 2144.0
offset_bottom = 579.0
scale = Vector2(0.5, 0.5)
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="EnglishButton" type="TextureButton" parent="LanguageContainer"]
layout_mode = 2
texture_normal = ExtResource("2_kkui5")

[node name="PolishButton" type="TextureButton" parent="LanguageContainer"]
layout_mode = 2
texture_normal = ExtResource("3_opiql")

[node name="BACK_BUTTON" type="Button" parent="."]
custom_minimum_size = Vector2(400, 125)
offset_left = 165.0
offset_top = 857.0
offset_right = 565.0
offset_bottom = 982.0
theme_override_font_sizes/font_size = 40
text = "BACK_BUTTON"

[node name="NEXT_BUTTON" type="Button" parent="."]
custom_minimum_size = Vector2(400, 125)
offset_left = 1428.0
offset_top = 855.0
offset_right = 1828.0
offset_bottom = 980.0
theme_override_font_sizes/font_size = 40
text = "NEXT_BUTTON"

[connection signal="value_changed" from="SettingsContainer/PlayersNumberSlider" to="." method="_on_players_number_slider_value_changed"]
[connection signal="pressed" from="LanguageContainer/EnglishButton" to="." method="_on_english_button_pressed"]
[connection signal="pressed" from="LanguageContainer/PolishButton" to="." method="_on_polish_button_pressed"]
[connection signal="pressed" from="BACK_BUTTON" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NEXT_BUTTON" to="." method="_on_next_button_pressed"]
